--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,24 @@
 // app global css in SCSS form
+.layout {
+  min-height: 100vh;
+}
+.layout--auth {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  background-color: #fff;
+}
+.layout--public {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  background-color: #fff;
+}
+.layout--public .layout__content {
+  width: 100%;
+  margin: auto;
+}
+.layout__content {
+  width: 100%;
+}
